# net-workspace

./: .gitignore  CONTRIBUTING.md  README.md
archive/: README.md
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260606_0001_initial_schema.py
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/: ai.py  auth.py  job_records.py  sources.py  tasks.py  templates.py  workspaces.py
backend/app/db/: base.py  types.py
backend/app/models/: __init__.py  audit_log.py  job_record.py  mixins.py  onboarding.py  proposal.py  source.py  task.py  template.py  user.py  workspace.py
backend/app/routers/: auth.py  job_records.py  sources.py  tasks.py  templates.py  workspaces.py
backend/app/schemas/: __init__.py  audit_log.py  auth.py  common.py  job_record.py  onboarding.py  proposal.py  source.py  task.py  template.py  test_run.py  workspace.py
backend/app/services/: ai_template_generator.py  auth_service.py  search_service.py  task_executor.py  task_service.py  template_service.py  workspace_service.py
backend/app/spiders/: adapters.py  dsl_executor.py
docs/: API_DESIGN.md  ARCHITECTURE.md  DATABASE_DESIGN.md  DEVELOPMENT.md  LEGACY_REFERENCE.md  PRD.md  REPOSITORY_SETUP.md  SITE_ONBOARDING_WORKFLOW.md  TEMPLATE_DSL.md
frontend/: README.md  app.py  example_template.yaml  test_dsl.yaml  test_job_page.html  zhaopin_dsl.yaml
spiders/: README.md
tests/: README.md
