[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "networkspace-backend"
version = "0.1.0"
description = "NetWorkspace backend foundation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13,<2.0",
  "fastapi>=0.115,<1.0",
  "pydantic>=2.0,<3.0",
  "pydantic-settings>=2.0,<3.0",
  "sqlalchemy[asyncio]>=2.0,<3.0",
  "python-jose[cryptography]>=3.3,<4.0",
  "passlib[bcrypt]>=1.7,<2.0",
  "aiosqlite>=0.20,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pyyaml>=6.0,<7.0",
  "python-multipart>=0.0.9,<1.0",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.29,<1.0"]
mysql = ["aiomysql>=0.2,<1.0"]
spider = [
  "httpx>=0.27,<1.0",
  "beautifulsoup4>=4.12,<5.0",
  "lxml>=5.0,<6.0",
  "playwright>=1.40,<2.0",
]
ai = [
  "openai>=1.0,<2.0",
]
frontend = [
  "streamlit>=1.40,<2.0",
  "plotly>=5.0,<6.0",
]
all = [
  "networkspace-backend[postgres,spider,ai,frontend]",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

